[project]
name = "pdf2img"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.26.5",
    "rich>=14.2.0",
]

[project.scripts]
pdf2img = "pdf2img.__main__:main"

[tool.setuptools]
package-dir = { "pdf2img" = "src" }
